chore: Change how PACKAGE_VERSION string is build (#232)
* chore: Change how PACKAGE_VERSION string is build

Git commits are not guaranteed to be available or reliable on build time
(for example, some packaging systems prefer without a VCS or have their
own image of the repository with their own commits). Build time may be
useful, but it should not be part of the PACKAGE_VERSION, instead it
should be generated seperately and used seperately when -v is called.
Also, the version should not depend on an outside variable, the
CMakeLists.txt file should be the final source for this.

This commit removes the above git commit and build time variables (build
time will be re-introduced in another commit) and simplifies the version
string, with one exception: A compile time option called VERSION_SUFFIX,
which can be used to identify the build (e.g, 'unofficial', 'dev', 'rc'
or nothing at all). By default this will be dev when building from
source, or 'unofficial' when using ./configure. Package maintainers may
use their own suffix to distinguish building processes or add additional
version information.

- Add a new common function called version
- Add build time to version output again
- Add optional compile time definitions for specifing Git commit and Git
  branch
- Add missing version to rest of binaries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,8 @@ option(ENABLE_NFS_ACL_SUPPORT   "Enable nfs-ganesha ACL support"                
 option(ENABLE_COMPILE_COMMANDS  "Enable generation of compile_commands.json"             ON)
 option(ENABLE_PROMETHEUS        "Enable prometheus metrics"                              ON)
 
+option(GENERATE_GIT_INFO "Generate git info from current repository (for version commands)" ON)
+
 # If enabled (default), the file compile_commands.json is generated in the build
 # directory. Tools like clangd and vscode use this file for proper analysis.
 set(CMAKE_EXPORT_COMPILE_COMMANDS ${ENABLE_COMPILE_COMMANDS})
@@ -188,16 +190,16 @@ endif()
 
 project(saunafs)
 
-if(NOT PACKAGE_VERSION)
-  set(DEFAULT_MIN_VERSION "4.6.0")
-  execute_process(COMMAND "git" "rev-parse" "--short" "HEAD"
-    OUTPUT_VARIABLE GIT_SHA1_SHORT RESULT_VARIABLE GIT_SHA1_SHORT_RETURN_VALUE
-    OUTPUT_STRIP_TRAILING_WHITESPACE)
-  execute_process(COMMAND "git" "rev-parse" "--abbrev-ref" "HEAD"
-    OUTPUT_VARIABLE GIT_BRANCH_NAME RESULT_VARIABLE GIT_BRANCH_NAME_RETURN_VALUE
-    OUTPUT_STRIP_TRAILING_WHITESPACE)
-  string(TIMESTAMP BUILD_TIMESTAMP "%y%m%d-%H%M%S")
-  set(PACKAGE_VERSION "${DEFAULT_MIN_VERSION}-${BUILD_TIMESTAMP}-unstable-${GIT_BRANCH_NAME}-${GIT_SHA1_SHORT}")
+set(DEFAULT_MIN_VERSION "4.6.0")
+
+string(TIMESTAMP BUILD_TIMESTAMP)
+add_compile_definitions(BUILD_TIME="${BUILD_TIMESTAMP}")
+
+
+if(VERSION_SUFFIX)
+  set(PACKAGE_VERSION "${DEFAULT_MIN_VERSION}${VERSION_SUFFIX}")
+else()
+  set(PACKAGE_VERSION "${DEFAULT_MIN_VERSION}-dev")
 endif()
 
 string(REGEX MATCH "^([0-9]+)\\.([0-9]+)\\.([0-9]+)" PACKAGE_VERSION_MATCH ${PACKAGE_VERSION})
@@ -216,6 +218,22 @@ endif()
 if(CMAKE_SYSTEM_NAME STREQUAL "SunOS")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m64" )
   set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -m64")
+endif()
+
+if(GIT_COMMIT)
+  add_compile_definitions(GIT_COMMIT="${GIT_COMMIT}")
+elseif(GENERATE_GIT_INFO)
+  execute_process(COMMAND "git" "rev-parse" "HEAD"
+  OUTPUT_VARIABLE GIT_COMMIT OUTPUT_STRIP_TRAILING_WHITESPACE)
+  add_compile_definitions(GIT_COMMIT="${GIT_COMMIT}")
+endif()
+
+if(GIT_BRANCH)
+  add_compile_definitions(GIT_BRANCH="${GIT_BRANCH}")
+elseif(GENERATE_GIT_INFO)
+  execute_process(COMMAND "git" "rev-parse" "--abbrev-ref" "HEAD"
+  OUTPUT_VARIABLE GIT_BRANCH OUTPUT_STRIP_TRAILING_WHITESPACE)
+  add_compile_definitions(GIT_BRANCH="${GIT_BRANCH}")
 endif()
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
