ci: Use ccache for github action
This commit should improve the speed of compilation. To do this, a new
option in CMakeLists.txt is added to not generate the timestamp (which
can interfere with caching)

--- a/.github/workflows/run-unit-and-ganesha-tests.yml
+++ b/.github/workflows/run-unit-and-ganesha-tests.yml
@@ -33,9 +33,13 @@ jobs:
         cd $GITHUB_WORKSPACE/tests
         sudo ./setup_machine.sh setup /mnt/hdb /mnt/hdc /mnt/hdd
 
+    - name: ccache
+      uses: hendrikmuhs/ccache-action@v1.2
+
     - name: Activate virtual environment and build SaunaFS
       run: |
         source /var/lib/saunafs_setup_machine_venv/bin/activate
+        export PATH="/usr/lib/ccache:/usr/local/opt/ccache/libexec:$PATH"
         cd $GITHUB_WORKSPACE/tests/ci_build
         ./run-build.sh test
 
