--- a/src/data/sfsmetalogger.cfg.in
+++ b/src/data/sfsmetalogger.cfg.in
@@ -15,6 +15,14 @@
 ## (Default: 0)
 # LOCK_MEMORY = 0
 
+## Linux only: limit glibc malloc arenas to given value - prevents from using
+## huge amount of virtual memory. This can influence performance by reducing
+## memory fragmentation and improving cache locality, but it may also lead to
+## contention and reduced parallelism in multi-threaded applications.
+## Use it in constrained memory environments, recommended values are 4 or 8.
+## (default is 0: disabled or let glibc decide)
+# LIMIT_GLIBC_MALLOC_ARENAS = 0
+
 ## Nice level to run daemon with, when possible to set.
 ## (Default: -19)
 # NICE_LEVEL = -19
