feat(build): Add presets for cmake with vcpkg
- Add presets for cmake with VCPKG.
- Add utility scripts for vcpkg setup and packages install/update.
- Set the packages to gather from vcpkg registry.
- Lock the dependency versions to be used for avoiding the
  consequences of undesired upgrades at unexpected moment.
- Add VCPKG usage to the documentation.
- Remove Hunter package manager
- Update gtests dependencies

Co-authored-by: guillex <guillex@leil.io>

Signed-off-by: Baldor <baldor@leil.io>

--- a/src/slogger/CMakeLists.txt
+++ b/src/slogger/CMakeLists.txt
@@ -1,4 +1,5 @@
 collect_sources(SLOGGER)
 
 shared_add_library(slogger ${SLOGGER_SOURCES})
+target_link_libraries(slogger fmt::fmt spdlog::spdlog)
 shared_target_link_libraries(slogger STATIC config sfserr SHARED config_pic sfserr_pic)
