--- a/src/unittests/CMakeLists.txt
+++ b/src/unittests/CMakeLists.txt
@@ -1,5 +1,3 @@
-include_directories(${GTEST_INCLUDE_DIRS})
-
 add_subdirectory(mocks)
 
 collect_sources(UNITTESTS)
@@ -15,9 +13,10 @@ endif()
 
 foreach(unittest_name ${UNITTEST_TEST_NAMES})
   add_executable(unittest_${unittest_name} ${UNITTESTS_MAIN})
-  target_link_libraries(unittest_${unittest_name} gtest
+  target_link_libraries(unittest_${unittest_name}
         ${ENABLE_WHOLE_ARCHIVE} ${unittest_name}_unittest ${DISABLE_WHOLE_ARCHIVE} ${${unittest_name}_UNITTEST_LINKLIST}
-        unittests-helpers unittest-mocks ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
+        unittests-helpers unittest-mocks ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY} GTest::gtest GTest::gtest_main pthread)
+  add_test(NAME ${unittest_name} COMMAND unittest_${unittest_name})
 endforeach()
 
 configure_file(unittests.in unittests @ONLY)
