--- a/src/chunkserver/CMakeLists.txt
+++ b/src/chunkserver/CMakeLists.txt
@@ -3,8 +3,8 @@ add_definitions(-DSAUNAFS_MAX_FILES=10000)
 add_definitions(-DAPPNAME=sfschunkserver -DAPP_EXAMPLES_SUBDIR="${CHUNKSERVER_EXAMPLES_SUBDIR}")
 
 # Boost libraries used for plugins
-find_package(Boost REQUIRED COMPONENTS filesystem system)
-include_directories(${Boost_INCLUDE_DIRS})
+#find_package(Boost REQUIRED COMPONENTS filesystem system)
+#include_directories(${Boost_INCLUDE_DIRS})
 
 add_subdirectory(chunkserver-common)
 add_subdirectory(plugins)
@@ -12,7 +12,7 @@ add_subdirectory(plugins)
 collect_sources(CHUNKSERVER)
 add_library(chunkserver ${CHUNKSERVER_SOURCES})
 target_link_libraries(chunkserver chunkserver-common safsprotocol sfscommon
-    ${Boost_LIBRARIES}
+#    ${Boost_LIBRARIES}
     ${ADDITIONAL_LIBS})
 create_unittest(chunkserver ${CHUNKSERVER_TESTS})
 link_unittest(chunkserver chunkserver sfscommon)
