--- a/src/slogger/CMakeLists.txt
+++ b/src/slogger/CMakeLists.txt
@@ -1,5 +1,9 @@
 collect_sources(SLOGGER)
 
 shared_add_library(slogger ${SLOGGER_SOURCES})
-target_link_libraries(slogger fmt::fmt spdlog::spdlog)
+if(MINGW)
+    target_link_libraries(slogger fmt::fmt)
+else()
+    target_link_libraries(slogger fmt::fmt spdlog::spdlog)
+endif()
 shared_target_link_libraries(slogger STATIC config sfserr SHARED config_pic sfserr_pic)
