fix(tests): Link to header version of spdlog and fmt
Also, specify the linking scope explicitly for other libs.

Signed-off-by: Baldor <baldor@leil.io>

--- a/src/admin/CMakeLists.txt
+++ b/src/admin/CMakeLists.txt
@@ -1,12 +1,12 @@
 collect_sources(SAUNAFS_ADMIN)
 
 add_library(saunafs-admin-lib ${SAUNAFS_ADMIN_SOURCES})
-target_link_libraries(saunafs-admin-lib sfscommon)
+target_link_libraries(saunafs-admin-lib PRIVATE sfscommon)
 create_unittest(saunafs-admin-lib ${SAUNAFS_ADMIN_TESTS})
 link_unittest(saunafs-admin-lib sfscommon)
 
 add_executable(saunafs-admin ${SAUNAFS_ADMIN_MAIN})
-target_link_libraries(saunafs-admin saunafs-admin-lib)
+target_link_libraries(saunafs-admin PRIVATE saunafs-admin-lib)
 install(TARGETS saunafs-admin RUNTIME DESTINATION ${BIN_SUBDIR})
 
 if(NOT MINGW)
