--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -18,35 +18,35 @@ endif()
 
 
 shared_add_library(sfscommon ${COMMON_SOURCES})
-shared_target_link_libraries(sfscommon STATIC sfserr SHARED sfserr_pic)
-shared_target_link_libraries(sfscommon STATIC slogger SHARED slogger_pic)
+shared_target_link_libraries(sfscommon PRIVATE STATIC sfserr SHARED sfserr_pic)
+shared_target_link_libraries(sfscommon PRIVATE STATIC slogger SHARED slogger_pic)
 
 if (HAVE_CRCUTIL)
   # Use crcutil Library
   include_directories(SYSTEM ${CRCUTIL_INCLUDE_DIRS}) # skip compiler warnings for external crcutil headers
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CRCUTIL_CXX_FLAGS}")
-  shared_target_link_libraries(sfscommon ${CRCUTIL_LIBRARIES})
+  shared_target_link_libraries(sfscommon PRIVATE ${CRCUTIL_LIBRARIES})
 endif()
 if (ZLIB_FOUND)
-  shared_target_link_libraries(sfscommon ${ZLIB_LIBRARIES})
+  shared_target_link_libraries(sfscommon PRIVATE ${ZLIB_LIBRARIES})
 endif()
 if (RT_LIBRARY)
-  shared_target_link_libraries(sfscommon ${RT_LIBRARY})
+  shared_target_link_libraries(sfscommon PRIVATE ${RT_LIBRARY})
 endif()
 if(TCMALLOC_LIBRARY)
-  shared_target_link_libraries(sfscommon ${TCMALLOC_LIBRARY})
+  shared_target_link_libraries(sfscommon PRIVATE ${TCMALLOC_LIBRARY})
 endif()
 if(JEALLOC_LIBRARY)
-  shared_target_link_libraries(sfscommon ${JEMALLOC_LIBRARY})
+  shared_target_link_libraries(sfscommon PRIVATE ${JEMALLOC_LIBRARY})
 endif()
 if(SOCKET_FOUND)
-  shared_target_link_libraries(sfscommon ${SOCKET_LIBRARIES})
+  shared_target_link_libraries(sfscommon PRIVATE ${SOCKET_LIBRARIES})
 endif()
 if(ISAL_LIBRARY)
-  shared_target_link_libraries(sfscommon STATIC ${ISAL_LIBRARY} SHARED ${ISAL_PIC_LIBRARY})
+  shared_target_link_libraries(sfscommon PRIVATE STATIC ${ISAL_LIBRARY} SHARED ${ISAL_PIC_LIBRARY})
 endif()
 if(JUDY_LIBRARY)
-  shared_target_link_libraries(sfscommon ${JUDY_LIBRARY})
+  shared_target_link_libraries(sfscommon PRIVATE ${JUDY_LIBRARY})
 endif()
 
 create_unittest(sfscommon ${COMMON_TESTS} ../master/goal_config_loader.cc)
