--- a/src/config/CMakeLists.txt
+++ b/src/config/CMakeLists.txt
@@ -1,4 +1,4 @@
 collect_sources(CONFIG)
 
 shared_add_library(config ${CONFIG_SOURCES})
-shared_target_link_libraries(config ${YAML_CPP_LIBRARIES})
+shared_target_link_libraries(config PRIVATE ${YAML_CPP_LIBRARIES})
