--- a/src/metalogger/CMakeLists.txt
+++ b/src/metalogger/CMakeLists.txt
@@ -5,13 +5,13 @@ add_definitions(-DAPPNAME=sfsmetalogger -DAPP_EXAMPLES_SUBDIR="${METALOGGER_EXAM
 collect_sources(METALOGGER)
 
 add_library(metalogger ${METALOGGER_SOURCES} ../master/changelog.cc ../master/masterconn.cc)
-target_link_libraries(metalogger sfscommon)
+target_link_libraries(metalogger PRIVATE sfscommon)
 
 create_unittest(metalogger ${METALOGGER_TESTS})
 
 add_executable(sfsmetalogger ${MAIN_SRC})
-target_link_libraries(sfsmetalogger metalogger ${PAM_LIBRARIES})
+target_link_libraries(sfsmetalogger PRIVATE metalogger ${PAM_LIBRARIES})
 if(SYSTEMD_FOUND)
-  target_link_libraries(sfsmetalogger ${SYSTEMD_LIBRARIES})
+  target_link_libraries(sfsmetalogger PRIVATE ${SYSTEMD_LIBRARIES})
 endif()
 install(TARGETS sfsmetalogger RUNTIME DESTINATION ${SBIN_SUBDIR})
