ci: Fix run-unit-and-ganesha-tests with vcpkg and codespell
Signed-off-by: Urmas Rist <urmas@leil.io>

--- a/tests/docker/Dockerfile.test
+++ b/tests/docker/Dockerfile.test
@@ -10,6 +10,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 WORKDIR /saunafs
 COPY ./tests/install-packages.sh ./tests/
+COPY ./tests/llvm.sh ./tests/
 RUN --mount=target=/var/lib/apt/lists,type=cache,sharing=locked \
     --mount=target=/var/cache/apt,type=cache,sharing=locked \
     rm -f /etc/apt/apt.conf.d/docker-clean && \
