WIP: Fix clang-19 test and github action

--- a/.github/workflows/run-unit-and-ganesha-tests.yml
+++ b/.github/workflows/run-unit-and-ganesha-tests.yml
@@ -35,18 +35,38 @@ jobs:
                   cd $GITHUB_WORKSPACE
                   $GITHUB_WORKSPACE/utils/vcpkg_setup.sh
                   vcpkg install --triplet x64-linux
-                  source /var/lib/saunafs_setup_machine_venv/bin/activate
-                  VCPKG_ROOT="$HOME/vcpkg/" cmake --workflow --preset=test-vcpkg
+
+            - name: Build SaunaFS
+              run: |
+                source /var/lib/saunafs_setup_machine_venv/bin/activate
+                mkdir -p build
+                cd build
+                nice cmake \
+                -DCMAKE_TOOLCHAIN_FILE="${HOME}/vcpkg/scripts/buildsystems/vcpkg.cmake" \
+                -DENABLE_CLIENT_LIB=ON \
+                -DENABLE_DOCS=ON \
+                -DENABLE_NFS_GANESHA=ON \
+                -DENABLE_POLONAISE=OFF \
+                -DENABLE_URAFT=ON \
+                -DGSH_CAN_HOST_LOCAL_FS=ON \
+                -DCMAKE_BUILD_TYPE=RelWithDebInfo \
+                -DCMAKE_INSTALL_PREFIX="${GITHUB_WORKSPACE}/install/saunafs/" \
+                -DENABLE_TESTS=ON \
+                -DCODE_COVERAGE=OFF \
+                -DSAUNAFS_TEST_POINTER_OBFUSCATION=ON \
+                -DENABLE_WERROR=ON \
+                "${GITHUB_WORKSPACE}"
+                make -j"$(nproc)" install
+
 
             - name: Run Unit Tests suite
               run: |
-                  chmod +x $GITHUB_WORKSPACE/tests/ci_build/run-unit-tests.sh
-                  $GITHUB_WORKSPACE/tests/ci_build/run-unit-tests.sh
+                "${GITHUB_WORKSPACE}/build/src/unittests/unittests" --gtest_color=yes
 
             - name: Run Ganesha suite
               run: |
                   sudo chmod o+xr /home/runner/
                   sudo chown saunafstest:saunafstest /mnt/saunafstest_loop_*
                   sudo chown saunafstest:saunafstest /mnt/hd{b,c,d}
-                  chmod +x $GITHUB_WORKSPACE/tests/ci_build/run-ganesha-tests.sh
-                  $GITHUB_WORKSPACE/tests/ci_build/run-ganesha-tests.sh
+                  chmod +x "${GITHUB_WORKSPACE}/tests/ci_build/run-ganesha-tests.sh"
+                  "${GITHUB_WORKSPACE}/tests/ci_build/run-ganesha-tests.sh"
