feat(uraft): Introduce floating IP manager for HA
Previously, a floating IP drop triggered a new election in uRaft,
sometimes leading to leader flip-flopping.

This commit introduces a Floating IP manager to improve high
availability by actively monitoring and managing floating IP
availability. It uses a socket-based event listener to detect
floating IP loss and initiates recovery actions to restore it.

Co-authored-by: Piotr Modrzyk <piotr.modrzyk@gmail.com>

Signed-off-by: Crash <crash@leil.io>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -438,12 +438,16 @@ if(NOT MINGW)
   endif()
 endif()
 
+if (ENABLE_URAFT)
+  add_subdirectory(src/uraft)
+endif()
+
+# 'src/unittests' should be the last to be added to guarantee that all unit
+# tests are included.
+# Otherwise, some unit tests could not be generated, like uraft's ones.
 if(BUILD_TESTS)
   add_subdirectory(src/unittests)
   add_subdirectory(tests)
-endif()
-if (ENABLE_URAFT)
-  add_subdirectory(src/uraft)
 endif()
 
 include(Packing)
