build: Fix wrong path for examples
Due to where project("saunafs") is defined, it's adding the project name
to the folder with doc. This wasn't an issue in the past because project
name was defined later after the doc folder variable was declared.

This hardcodes the doc folder to be always
$CMAKE_INSTALL_FULL_DATAROOTDIR/doc/.

Signed-off-by: Urmas Rist <urmas@leil.io>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,7 +83,7 @@ set(INCL_SUBDIR                 "${CMAKE_INSTALL_FULL_INCLUDEDIR}/saunafs")
 set(ETC_SUBDIR                  "${CMAKE_INSTALL_FULL_SYSCONFDIR}/saunafs")
 set(RUN_SUBDIR                  "${CMAKE_INSTALL_FULL_LOCALSTATEDIR}/run/saunafs")
 set(DATA_SUBDIR                 "${CMAKE_INSTALL_FULL_LOCALSTATEDIR}/lib/saunafs")
-set(USR_SHARE_DOC               "${CMAKE_INSTALL_FULL_DOCDIR}")
+set(USR_SHARE_DOC               "${CMAKE_INSTALL_FULL_DATAROOTDIR}/doc/")
 set(EXAMPLES_SUBDIR             "examples")
 set(CHUNKSERVER_NAME            "saunafs-chunkserver")
 set(CLIENT_NAME                 "saunafs-client")
