--- a/src/master/CMakeLists.txt
+++ b/src/master/CMakeLists.txt
@@ -31,20 +31,20 @@ else()
 endif()
 
 add_library(master ${MASTER_SOURCES})
-target_link_libraries(master PRIVATE sfscommon metrics ${ADDITIONAL_LIBS})
+target_link_libraries(master sfscommon metrics ${ADDITIONAL_LIBS})
 if(JUDY_LIBRARY)
-  target_link_libraries(master PRIVATE ${JUDY_LIBRARY})
+  target_link_libraries(master ${JUDY_LIBRARY})
 endif()
 if(DB_FOUND)
-  target_link_libraries(master PRIVATE ${DB_LIBRARY})
+  target_link_libraries(master ${DB_LIBRARY})
 endif()
 create_unittest(master ${MASTER_TESTS})
 link_unittest(master master sfscommon)
 
 add_executable(sfsmaster ${MAIN_SRC})
-target_link_libraries(sfsmaster PRIVATE master metrics ${PAM_LIBRARIES})
+target_link_libraries(sfsmaster master metrics ${PAM_LIBRARIES})
 if(SYSTEMD_FOUND)
-  target_link_libraries(sfsmaster PRIVATE ${SYSTEMD_LIBRARIES})
+  target_link_libraries(sfsmaster ${SYSTEMD_LIBRARIES})
 endif()
 install(TARGETS sfsmaster RUNTIME DESTINATION ${SBIN_SUBDIR})
 
