--- a/src/mount/polonaise/CMakeLists.txt
+++ b/src/mount/polonaise/CMakeLists.txt
@@ -19,7 +19,7 @@ set(CMAKE_INSTALL_RPATH_USE_LINK_PATH true)
 
 include_directories(${Boost_INCLUDE_DIRS} ${POLONAISE_INCLUDE_DIRS} ${THRIFT_INCLUDE_DIRS})
 add_executable(saunafs-polonaise-server ${MOUNT_POLONAISE_MAIN} ${MOUNT_POLONAISE_SOURCES})
-target_link_libraries(saunafs-polonaise-server PRIVATE sfscommon mount ${POLONAISE_LIBRARIES}
+target_link_libraries(saunafs-polonaise-server sfscommon mount ${POLONAISE_LIBRARIES}
 ${THRIFT_LIBRARIES} ${Boost_PROGRAM_OPTIONS_LIBRARY} ${Boost_SYSTEM_LIBRARY})
 
 install(TARGETS saunafs-polonaise-server RUNTIME DESTINATION ${BIN_SUBDIR})
