--- a/src/slogger/CMakeLists.txt
+++ b/src/slogger/CMakeLists.txt
@@ -2,8 +2,8 @@ collect_sources(SLOGGER)
 
 shared_add_library(slogger ${SLOGGER_SOURCES})
 if(MINGW)
-    target_link_libraries(slogger fmt::fmt-header-only)
+    target_link_libraries(slogger fmt::fmt)
 else()
-    target_link_libraries(slogger  fmt::fmt-header-only spdlog::spdlog_header_only)
+    target_link_libraries(slogger fmt::fmt spdlog::spdlog)
 endif()
 shared_target_link_libraries(slogger STATIC config sfserr SHARED config_pic sfserr_pic)
