build: Add vcpkg support (#302)
* feat(build): Add presets for cmake with vcpkg

- Add presets for cmake with VCPKG.
- Add utility scripts for vcpkg setup and packages install/update.
- Set the packages to gather from vcpkg registry.
- Lock the dependency versions to be used for avoiding the
  consequences of undesired upgrades at unexpected moment.
- Add VCPKG usage to the documentation.
- Remove Hunter package manager
- Update gtests dependencies

Co-authored-by: guillex <guillex@leil.io>

Signed-off-by: Baldor <baldor@leil.io>

* fix: Update github action for vcpkg

Signed-off-by: Baldor <baldor@leil.io>

* fix: Fix compilation in Windows

Signed-off-by: Dave <dave@leil.io>

* fix(tests): Link to header version of spdlog and fmt

Also, specify the linking scope explicitly for other libs.

Signed-off-by: Baldor <baldor@leil.io>

* build: Fix wrong path for examples

Due to where project("saunafs") is defined, it's adding the project name
to the folder with doc. This wasn't an issue in the past because project
name was defined later after the doc folder variable was declared.

This hardcodes the doc folder to be always
$CMAKE_INSTALL_FULL_DATAROOTDIR/doc/.

Signed-off-by: Urmas Rist <urmas@leil.io>

* ci: Refactor CI
* Add Dockerfile from sfstests
* Seperate package installation script (for caching in Dockerfile)
* Use a fixed version of llvm.sh (don't wget it)
* Use vcpkg in Docker
* Disable caching CMake configuration
* Add disabled Ubuntu 22.04 tests

Signed-off-by: Urmas Rist <urmas@leil.io>

* ci: Fix run-unit-and-ganesha-tests with vcpkg and codespell

Signed-off-by: Urmas Rist <urmas@leil.io>

* ci: Add deployment pipeline

This will use our internal deployment pipeline to build the packages and
push to developer repository, but ONLY on the dev branch.

Signed-off-by: Urmas Rist <urmas@leil.io>

* chore: Fix spelling

Signed-off-by: Urmas Rist <urmas@leil.io>

* revert(build): Bring back link scope to defaults

The 0ee0ef67 commit introduced changes that are

--- a/src/slogger/CMakeLists.txt
+++ b/src/slogger/CMakeLists.txt
@@ -1,4 +1,9 @@
 collect_sources(SLOGGER)
 
 shared_add_library(slogger ${SLOGGER_SOURCES})
+if(MINGW)
+    target_link_libraries(slogger fmt::fmt)
+else()
+    target_link_libraries(slogger fmt::fmt spdlog::spdlog)
+endif()
 shared_target_link_libraries(slogger STATIC config sfserr SHARED config_pic sfserr_pic)
